--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,13 @@
 {
   "recommendations": [
+    "EditorConfig.editorconfig",
+    "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "EditorConfig.EditorConfig",
-    "msjsdiag.debugger-for-chrome"
+    "steoates.autoimport",
+    "formulahendry.auto-rename-tag",
+    "christian-kohler.path-intellisense",
+    "naumovs.color-highlight",
+    "msjsdiag.debugger-for-chrome",
+    "mkaufman.htmlhint"
   ]
 }
