--- a/package.json
+++ b/package.json
@@ -165,6 +165,8 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "browserslist-config-erb": "^0.0.1",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
@@ -224,7 +226,6 @@
     "@material-ui/core": "^4.11.2",
     "audio-core": "git+https://github.com/jamwerks/audio-core.git#v0.1.44",
     "axios": "^0.21.1",
-    "babel-plugin-macros": "^3.0.1",
     "electron-debug": "^3.1.0",
     "electron-is-dev": "^1.2.0",
     "electron-log": "^4.2.4",
