--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && cross-env yarn start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ./.erb/scripts/BabelRegister ./src/main.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.babel.js",
-    "test": "jest"
+    "test": "jest",
+    "svg-to-jsx": "svgr src/assets/images/SvgToConvert --out-dir src/assets/images/SvgConverted --svgo-config svgo.json"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -145,6 +146,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@babel/register": "^7.12.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@svgr/webpack": "^5.5.0",
     "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -224,6 +226,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@svgr/cli": "^5.5.0",
     "audio-core": "git+https://github.com/jamwerks/audio-core.git#v0.1.44",
     "axios": "^0.21.1",
     "electron-debug": "^3.1.0",
